--- a/Frontend/src/Components/PageHeader/PageHeader.scss
+++ b/Frontend/src/Components/PageHeader/PageHeader.scss
@@ -4,7 +4,7 @@
   justify-items: center;
   align-items: center;
   padding: 15px 0;
-  
+
   position: fixed;
   top: 0;
   width: 100%;
@@ -12,9 +12,9 @@
 }
 
 .pageHeader__title {
-    font-size: 26px;
-    font-style: italic;
-    font-weight: bold;
+  font-size: 26px;
+  font-style: italic;
+  font-weight: bold;
 }
 
 .pageHeader__modal {
@@ -34,7 +34,9 @@
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 50%; /* Could be more or less, depending on screen size */
+  min-width: 500px;
+  border-radius: 6px;
 }
 
 .pageHeader__button--container {
@@ -42,7 +44,7 @@
   gap: 10px;
 }
 
-.pageHeader__button--style {
+.pageHeader__button--standart {
   padding: 10px 20px;
   font-size: 16px;
   color: white;
