--- a/Frontend/src/Components/ProductList/ProductList.scss
+++ b/Frontend/src/Components/ProductList/ProductList.scss
@@ -35,3 +35,9 @@
   font-size: 22px;
   margin-top: 5px;
 }
+
+.productList__filter{
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 6px;
+}
