Added scrolling to the product part from top of the main page

--- a/Frontend/src/Components/MainPageIntroduction/MainPageIntroduction.scss
+++ b/Frontend/src/Components/MainPageIntroduction/MainPageIntroduction.scss
@@ -1,36 +1,58 @@
-.introduction__container{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 30px;
-    padding: 20px;
-    background-color: rgb(200, 200, 200);
+.introduction__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 30px;
+  padding: 20px;
+  background-color: rgb(200, 200, 200);
+  border-radius: 6px;
+  width: 100%;
+  margin-top: 68px; //For sticky header
+}
+
+.introduction__title--container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.introduction__title {
+  font-size: 40px;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.introduction__image {
+  width: 100%;
+  border-radius: 6px;
+}
+
+.textCenter {
+  text-align: center;
+}
+
+.textEnd {
+  text-align: end;
+}
+
+.introduction__button--container {
+  display: grid;
+  grid-row-gap: 30px;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.introduction__button--style{
     border-radius: 6px;
-    width: 100%;
-    margin-top: 68px; //For sticky header
-}
-
-.introduction__title--container{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-
-.introduction__title{
-    font-size: 40px;
+    border: none;
+    cursor: pointer;
+    background-color: white;
+    font-size: 24px;
     font-style: italic;
-    font-weight: bold;
 }
 
-.introduction__image{
-    width: 100%;
-    border-radius: 6px;
-}
-
-.textCenter{
-    text-align: center;
-}
-
-.textEnd{
-    text-align: end;
+.introduction__button--style:hover{
+    transition: 0.3s;
+    box-shadow:
+      rgba(0, 0, 0, 0.3) 0px 19px 38px,
+      rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
