Added product sorting by price low to high and high to low

--- a/Frontend/src/Components/ProductList/ProductList.scss
+++ b/Frontend/src/Components/ProductList/ProductList.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 25px;
-  margin: 20px 10px;
+  margin: 15px 10px;
 }
 
 .productList__product--container {
@@ -36,8 +36,15 @@
   margin-top: 5px;
 }
 
+.productList__filter--container{
+    display: flex;
+    gap: 10px;
+    margin-top: 15px;
+}
+
 .productList__filter{
     padding: 5px;
     font-size: 16px;
     border-radius: 6px;
 }
+
