Created global styles, added margin for sticky header

--- a/Frontend/src/globalStyles.scss
+++ b/Frontend/src/globalStyles.scss
@@ -2,3 +2,7 @@ body {
   margin: 0 10px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.marginForHeader {
+  margin-top: 68px; //For sticky header
+}
