Added cart initial and empty states

--- a/Frontend/src/Pages/Cart/Cart.scss
+++ b/Frontend/src/Pages/Cart/Cart.scss
@@ -1,1 +1,36 @@
-.cart__container{}
+.cart__container{
+    margin: 20px;
+    border: 1px solid black;
+    border-radius: 6px;
+    padding: 10px;
+}
+
+.cart__header--container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.cart__header--title{
+    font-size: 20px;
+    font-weight: bold;
+    color: orangered;
+
+}
+
+.cart__header--button{
+    background-color: orangered;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.cart__list--empty{
+    text-align: center;
+    padding: 20px;
+    font-size: 24px;
+}
