--- a/Frontend/src/Components/ProductList/Components/ProductItemModal.scss
+++ b/Frontend/src/Components/ProductList/Components/ProductItemModal.scss
@@ -19,3 +19,40 @@
   min-width: 500px;
   border-radius: 6px;
 }
+
+.productItem__modal--buttonContainer {
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+}
+
+.productItem__modal--cancel {
+  padding: 10px 20px;
+  font-size: 16px;
+  color: rgb(70, 70, 70);
+  background-color: white;
+  cursor: pointer;
+  border: 1px solid rgb(70, 70, 70);
+  border-radius: 6px;
+
+  &:hover {
+    opacity: 0.8;
+    transition: 0.3s;
+  }
+}
+
+.productItem__modal--add {
+  padding: 10px 20px;
+  font-size: 16px;
+  color: white;
+  background-color: rgb(70, 70, 70);
+  cursor: pointer;
+  border: none;
+  border-radius: 6px;
+  text-decoration: none;
+
+  &:hover {
+    opacity: 0.8;
+    transition: 0.3s;
+  }
+}
