Added text align to global style

--- a/Frontend/src/globalStyles.scss
+++ b/Frontend/src/globalStyles.scss
@@ -6,3 +6,11 @@ body {
 .marginForHeader {
   margin-top: 68px; //For sticky header
 }
+
+.textAlignCenter {
+  text-align: center;
+}
+
+.textAlignEnd {
+  text-align: end;
+}
