User can create order and can call them in their profile

--- a/Frontend/src/Pages/MainPage/MainPage.scss
+++ b/Frontend/src/Pages/MainPage/MainPage.scss
@@ -15,7 +15,7 @@
   justify-content: center;
 }
 
-.mainPage__product--title {
-  font-size: 24px;
+.mainPage__title {
+  font-size: 28px;
   font-weight: bold;
 }
