--- a/Frontend/src/Pages/MainPage/MainPage.scss
+++ b/Frontend/src/Pages/MainPage/MainPage.scss
@@ -7,7 +7,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 15px;
+  margin-top: 20px;
+  gap: 20px;
 }
 
 .mainPage__introduction--container {
@@ -18,4 +19,10 @@
 .mainPage__title {
   font-size: 28px;
   font-weight: bold;
+}
+
+.mainPage__rights {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 14px;
 }
