--- a/Frontend/src/Pages/Profile/Profile.scss
+++ b/Frontend/src/Pages/Profile/Profile.scss
@@ -30,5 +30,15 @@
 }
 
 .profile__order--header {
-  font-size: 20px;
+  font-size: 22px;
+  text-decoration: underline;
+}
+
+.profile__needLogIn{
+    color: crimson;
+    font-size: 18px;
+    padding: 10px 15px;
+    margin-top: 10px;
+    display: inline-block;
+    border-radius: 6px;
 }
