--- a/Frontend/src/Pages/AboutUs/AboutUs.scss
+++ b/Frontend/src/Pages/AboutUs/AboutUs.scss
@@ -1,7 +1,7 @@
 .about__container{
     display: grid;
     gap: 20px;
-    grid-template-columns: 40% 40%;
+    grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
     justify-items: center;
     justify-content: center;
 }
